--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,56 @@
-.App {
-  text-align: center;
+.game {
+    width: 700px;
+    height:700px;
+    margin:  10vh auto;
+    background-color: #F5F5F5;
+    border-radius: 20px;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.dice--container {
+    display: grid;
+    grid-template: auto auto / repeat(5, 1fr);
+    gap: 30px;
+    row-gap: 60px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.game--button {
+    height: 40px;
+    width: 100px;
+    border: none;
+    border-radius: 6px;
+    background-color: #5035FF;
+    color: white;
+    font-size: 1.2rem;
+    font-family: 'Karla', sans-serif;
+    cursor: pointer;
+    text-align: center;
+    margin-top: 100px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.game--button:focus {
+    outline: none;
 }
 
-.App-link {
-  color: #61dafb;
+.game--button:active {
+    box-shadow: inset 5px 5px 10px -3px rgba(0, 0, 0, 0.7);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.record--current {
+    margin-top:40px;
+    font-family: 'Karla', sans-serif;
+}
+
+.record--top {
+    margin-top:20px;
+    font-family: 'Karla', sans-serif;
+}
+
+.records {
+    font-size:20px;
+    text-align: center;
 }
